--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +11,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.19",
+    "@types/react-router-dom": "^5.3.1",
+    "antd": "^4.16.13",
+    "antd-img-crop": "^3.16.0",
+    "axios": "^0.22.0",
+    "connected-react-router": "^6.9.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.42.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
